IWS_1st/IWS/API/Litecad.h

BOOL   LCAPI lcBlockSelMirror   (HANDLE hBlock, double X1, double Y1, double X2, double Y2, BOOL bCopy, BOOL bNewSelect);
BOOL   LCAPI lcBlockSelExplode  (HANDLE hBlock);
BOOL   LCAPI lcBlockSelSplit    (HANDLE hBlock, int nParts);
HANDLE LCAPI lcBlockSelJoin     (HANDLE hBlock, double Delta);
BOOL   LCAPI lcBlockSelAlign    (HANDLE hBlock, int Mode, double X, double Y);
HANDLE LCAPI lcBlockSelBlock    (HANDLE hBlock, LPCWSTR szName, double X, double Y, int Mode, BOOL bOverwrite);
HANDLE LCAPI lcBlockGetFirstSel (HANDLE hBlock);
HANDLE LCAPI lcBlockGetNextSel  (HANDLE hBlock);
// change entities order by layer
BOOL   LCAPI lcBlockOrderByLayers (HANDLE hBlock, HWND hWnd);
BOOL   LCAPI lcBlockSortTSP     (HANDLE hBlock, HANDLE hLayer, HWND hWnd);
double LCAPI lcBlockGetJumpsLen (HANDLE hBlock, HANDLE hLayer, HWND hWnd);
// remove entities of specified layer from a block (all blocks if hBlock=0)
BOOL   LCAPI lcLayerClear  (HANDLE hLayer, HANDLE hBlock);
// add line to a filling (see also lcDrwAddFilling)
BOOL   LCAPI lcFillSetLine (HANDLE hFill, int iLine, double Dist, double Angle, double W);
// Graphic object modify
BOOL   LCAPI lcEntErase      (HANDLE hEnt, BOOL bErase);
 
BOOL   LCAPI lcEntMove       (HANDLE hEnt, double dX, double dY);
 
BOOL   LCAPI lcEntAlign      (HANDLE hEnt, int Alignment, double X, double Y);
 
BOOL   LCAPI lcEntScale      (HANDLE hEnt, double X0, double Y0, double Scal);
 
BOOL   LCAPI lcEntRotate     (HANDLE hEnt, double X0, double Y0, double Angle);
BOOL   LCAPI lcEntMirror     (HANDLE hEnt, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcEntExplode    (HANDLE hEnt, BOOL bSelect, BOOL bErase);
HANDLE LCAPI lcEntSplit      (HANDLE hEnt, int nParts, BOOL bSelectNew, BOOL bDeleteEnt);
HANDLE LCAPI lcEntBreak      (HANDLE hEnt, double X, double Y, double Delta, BOOL bSelectNew, BOOL bDeleteEnt);
BOOL   LCAPI lcEntOffset     (HANDLE hEnt, double Dist);
BOOL   LCAPI lcEntToTop      (HANDLE hEnt);
BOOL   LCAPI lcEntToBottom   (HANDLE hEnt);
BOOL   LCAPI lcEntToAbove    (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntToUnder    (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntGetGrip    (HANDLE hEnt, int iGrip, double* pX, double* pY);
 
BOOL   LCAPI lcEntPutGrip    (HANDLE hEnt, int iGrip, double X, double Y);
BOOL   LCAPI lcEntUpdate     (HANDLE hEnt);
      
BOOL   LCAPI lcEntCopyBase   (HANDLE hEnt, HANDLE hEntFrom);
BOOL   LCAPI lcEntXData      (HANDLE hEnt, int Id, int Flags, int nBytes);
BOOL   LCAPI lcEntContainEnt (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntCrossEnt   (HANDLE hEnt, HANDLE hEnt2);
BOOL   LCAPI lcEntReverse    (HANDLE hEnt);
BOOL   LCAPI lcEntGetPoint   (HANDLE hEnt, double Dist, double* pX, double* pY, double* pAngle);
double LCAPI lcEntGetDist    (HANDLE hEnt, double X, double Y, double* pX2, double* pY2, double* pDist);
BOOL   LCAPI lcEntTransform  (HANDLE hEnt, HANDLE hTransform);
int    LCAPI lcIntersection  (HANDLE hEnt, HANDLE hEnt2, int Apparent);
BOOL   LCAPI lcInterGetPoint (int iPoint, double* pX, double* pY);
// Polyline Vertices
HANDLE LCAPI lcPlineAddVer      (HANDLE hPline, HANDLE hVer, double X, double Y);
HANDLE LCAPI lcPlineAddVer2     (HANDLE hPline, HANDLE hVer, double X, double Y, double Param, double W0, double W1);
HANDLE LCAPI lcPlineAddVerDir   (HANDLE hPline, HANDLE hVer, double Ang, double Length);
BOOL   LCAPI lcPlineEnd         (HANDLE hPline);
BOOL   LCAPI lcPlineFromPtbuf   (HANDLE hPline, HANDLE hPtbuf);
BOOL   LCAPI lcPlineFromMpgon   (HANDLE hPline, HANDLE hMpgon);
BOOL   LCAPI lcPlineFromFile    (HANDLE hPline, LPCWSTR szFileName);
BOOL   LCAPI lcPlineDeleteVer   (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetFirstVer (HANDLE hPline);
HANDLE LCAPI lcPlineGetNextVer  (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetLastVer  (HANDLE hPline);
HANDLE LCAPI lcPlineGetPrevVer  (HANDLE hPline, HANDLE hVer);
HANDLE LCAPI lcPlineGetVer      (HANDLE hPline, int Index);
HANDLE LCAPI lcPlineGetVerPt    (HANDLE hPline, double X, double Y, double Delta);
HANDLE LCAPI lcPlineGetSeg      (HANDLE hPline, double X, double Y, double Delta);
BOOL   LCAPI lcPlineReverse     (HANDLE hPline);
BOOL   LCAPI lcPlineSetStartVer (HANDLE hPline, HANDLE hVer);
//BOOL   LCAPI lcPlineReverse     (HANDLE hPline);
int    LCAPI lcPlineContainPoint(HANDLE hPline, double X, double Y);
BOOL   LCAPI lcPlineGetRoundPrm (HANDLE hPline, HANDLE hVer, double* px0, double* py0, double* pBulge, double* px1, double* py1);   // undoc (dwg plugin)
BOOL   LCAPI lcPlineGetPoint    (HANDLE hPline, double Dist, double* pX, double* pY, double* pAngle);
BOOL   LCAPI lcPlineGetPointOpp (HANDLE hPline, double Dist, double* pX, double* pY, double* pAngle, double* pX2, double* pY2);
double LCAPI lcPlineGetDist     (HANDLE hPline, double X, double Y, double* pX2, double* pY2, double* pDist);
BOOL   LCAPI lcPlineMakeArrow   (HANDLE hPline, double Hline, double Harr);  // undoc
HANDLE LCAPI lcPlineSplitBySI   (HANDLE hPline, BOOL bSelect, BOOL bErase);  // undoc
// Construction line
BOOL   LCAPI lcXlinePutDir  (HANDLE hXline, double X, double Y);
// Rectangle
int    LCAPI lcRectGetPolyline   (HANDLE hRect, double* pX, double* pY, double* pBulge);
// Circle

// Image reference 
BOOL   LCAPI lcImgRefGetPixel (HANDLE hImgRef, int iX, int iY, double* pX, double* pY, int* pColor);
BOOL   LCAPI lcImgRefResize   (HANDLE hImgRef, int NewWidth, int NewHeight, int Method);
// Hatch
BOOL   LCAPI lcHatchSetPattern   (HANDLE hHatch, LPCWSTR szFileName, LPCWSTR szPatName, double Scal, double Angle);
BOOL   LCAPI lcHatchBoundStart   (HANDLE hHatch);
BOOL   LCAPI lcHatchBoundPoint   (HANDLE hHatch, double X, double Y);
BOOL   LCAPI lcHatchBoundEntity  (HANDLE hHatch, HANDLE hEnt);
BOOL   LCAPI lcHatchBoundEndLoop (HANDLE hHatch);
 
BOOL   LCAPI lcHatchBoundEnd     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatStart     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatLine      (HANDLE hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);
BOOL   LCAPI lcHatchPatEnd       (HANDLE hHatch);
int    LCAPI lcHatchGetLoopSize  (HANDLE hHatch, int iLoop);
BOOL   LCAPI lcHatchGetPoint     (HANDLE hHatch, int iPnt, double* pX, double* pY);
HANDLE LCAPI lcHatchGetEnt       (HANDLE hHatch, int Mode);
// RPlan functions
HANDLE LCAPI lcRPlanAddVer      (HANDLE hRPlan, double X, double Y);
BOOL   LCAPI lcRPlanSetCurve    (HANDLE hVer, double Radius, double LenClot1, double LenClot2);
BOOL   LCAPI lcRPlanSetPos      (HANDLE hVer, double X, double Y);
BOOL   LCAPI lcRPlanDeleteVer   (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetFirstVer (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetNextVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetLastVer  (HANDLE hRPlan);
HANDLE LCAPI lcRPlanGetPrevVer  (HANDLE hRPlan, HANDLE hVer);
HANDLE LCAPI lcRPlanGetVer      (HANDLE hRPlan, int Index);
BOOL   LCAPI lcRPlanGetPoint    (HANDLE hRPlan, double Dist, double* pX, double* pY, double* pAngle, int* pSide);
BOOL   LCAPI lcRPlanGetDist     (HANDLE hRPlan, double X, double Y, double* pX2, double* pY2, double* pDist, double* pOffset);
// Viewport
BOOL   LCAPI lcVportSetView     (HANDLE hVport, double Xcen, double Ycen, double Scal, double Angle);
BOOL   LCAPI lcVportLayerDlg    (HANDLE hVport, HANDLE hLcWnd);
BOOL   LCAPI lcVportLayerCmd    (HANDLE hVport, int Cmd, HANDLE hLayer);
// Block attribute
HANDLE LCAPI lcBlkRefAddAtt      (HANDLE hBlockRef, LPCWSTR szTag, LPCWSTR szValue);  // for using in DWG plugin
HANDLE LCAPI lcBlkRefGetFirstAtt (HANDLE hBlockRef);
HANDLE LCAPI lcBlkRefGetNextAtt  (HANDLE hBlockRef, HANDLE hAttrib);
HANDLE LCAPI lcBlkRefGetAtt      (HANDLE hBlockRef, LPCWSTR szTag);
// Shape
BOOL   LCAPI lcShapeAddEnt      (HANDLE hShape, HANDLE hEnt, BOOL bErase);
 
BOOL   LCAPI lcShapeEnd         (HANDLE hShape);
 
HANDLE LCAPI lcShapeGetFirstEnt (HANDLE hShape);
HANDLE LCAPI lcShapeGetNextEnt  (HANDLE hShape, HANDLE hEnt);
HANDLE LCAPI lcShapeGetLastEnt  (HANDLE hShape);
HANDLE LCAPI lcShapeGetPrevEnt  (HANDLE hShape, HANDLE hEnt);