IWS_1st_No2DInsp/IWS/API/Litecad.pas

Function lcBlockSelMirror (hBlock: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelExplode (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelSplit (hBlock: IntPtr; nParts: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelJoin (hBlock: IntPtr; Delta: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockSelAlign (hBlock: IntPtr; Mode: Integer; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSelBlock (hBlock: IntPtr; szName: PWideChar; X: Double; Y: Double; Mode: Integer; bOverwrite: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetFirstSel (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockGetNextSel (hBlock: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlockOrderByLayers (hBlock: IntPtr; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockSortTSP (hBlock: IntPtr; hLayer: IntPtr; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlockGetJumpsLen (hBlock: IntPtr; hLayer: IntPtr; hWnd: IntPtr): Double; stdcall; external 'Litecad64.dll';
Function lcLayerClear (hLayer: IntPtr; hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcFillSetLine (hFill: IntPtr; iLine: Integer; Dist: Double; Angle: Double; W: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntErase (hEnt: IntPtr; bErase: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcEntMove (hEnt: IntPtr; dX: Double; dY: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntAlign (hEnt: IntPtr; Alignment: Integer; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntScale (hEnt: IntPtr; X0: Double; Y0: Double; Scal: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntRotate (hEnt: IntPtr; X0: Double; Y0: Double; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntMirror (hEnt: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntExplode (hEnt: IntPtr; bSelect: Integer; bErase: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcEntSplit (hEnt: IntPtr; nParts: Integer; bSelectNew: Integer; bDeleteEnt: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcEntBreak (hEnt: IntPtr; X: Double; Y: Double; Delta: Double; bSelectNew: Integer; bDeleteEnt: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcEntOffset (hEnt: IntPtr; Dist: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntToTop (hEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntToBottom (hEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntToAbove (hEnt: IntPtr; hEnt2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntToUnder (hEnt: IntPtr; hEnt2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntGetGrip (hEnt: IntPtr; iGrip: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcEntPutGrip (hEnt: IntPtr; iGrip: Integer; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcEntUpdate (hEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntCopyBase (hEnt: IntPtr; hEntFrom: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntXData (hEnt: IntPtr; Id: Integer; Flags: Integer; nBytes: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcEntContainEnt (hEnt: IntPtr; hEnt2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntCrossEnt (hEnt: IntPtr; hEnt2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntReverse (hEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcEntGetPoint (hEnt: IntPtr; Dist: Double; pX: Pdouble; pY: Pdouble; pAngle: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcEntGetDist (hEnt: IntPtr; X: Double; Y: Double; pX2: Pdouble; pY2: Pdouble; pDist: Pdouble): Double; stdcall; external 'Litecad64.dll';
Function lcEntTransform (hEnt: IntPtr; hTransform: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcIntersection (hEnt: IntPtr; hEnt2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcInterGetPoint (iPoint: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineAddVer (hPline: IntPtr; hVer: IntPtr; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineAddVer2 (hPline: IntPtr; hVer: IntPtr; X: Double; Y: Double; Param: Double; W0: Double; W1: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineAddVerDir (hPline: IntPtr; hVer: IntPtr; Ang: Double; Length: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineEnd (hPline: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineFromPtbuf (hPline: IntPtr; hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineFromMpgon (hPline: IntPtr; hMpgon: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineFromFile (hPline: IntPtr; szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineDeleteVer (hPline: IntPtr; hVer: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineGetFirstVer (hPline: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetNextVer (hPline: IntPtr; hVer: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetLastVer (hPline: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetPrevVer (hPline: IntPtr; hVer: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetVer (hPline: IntPtr; Index: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetVerPt (hPline: IntPtr; X: Double; Y: Double; Delta: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineGetSeg (hPline: IntPtr; X: Double; Y: Double; Delta: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPlineReverse (hPline: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineSetStartVer (hPline: IntPtr; hVer: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineContainPoint (hPline: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineGetRoundPrm (hPline: IntPtr; hVer: IntPtr; px0: Pdouble; py0: Pdouble; pBulge: Pdouble; px1: Pdouble; py1: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineGetPoint (hPline: IntPtr; Dist: Double; pX: Pdouble; pY: Pdouble; pAngle: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineGetPointOpp (hPline: IntPtr; Dist: Double; pX: Pdouble; pY: Pdouble; pAngle: Pdouble; pX2: Pdouble; pY2: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineGetDist (hPline: IntPtr; X: Double; Y: Double; pX2: Pdouble; pY2: Pdouble; pDist: Pdouble): Double; stdcall; external 'Litecad64.dll';
Function lcPlineMakeArrow (hPline: IntPtr; Hline: Double; Harr: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPlineSplitBySI (hPline: IntPtr; bSelect: Integer; bErase: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcXlinePutDir (hXline: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcRectGetPolyline (hRect: IntPtr; pX: Pdouble; pY: Pdouble; pBulge: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcImgRefGetPixel (hImgRef: IntPtr; iX: Integer; iY: Integer; pX: Pdouble; pY: Pdouble; pColor: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcImgRefResize (hImgRef: IntPtr; NewWidth: Integer; NewHeight: Integer; Method: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchSetPattern (hHatch: IntPtr; szFileName: PWideChar; szPatName: PWideChar; Scal: Double; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchBoundStart (hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchBoundPoint (hHatch: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchBoundEntity (hHatch: IntPtr; hEnt: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchBoundEndLoop (hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchBoundEnd (hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchPatStart (hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchPatLine (hHatch: IntPtr; Angle: Double; x0: Double; y0: Double; dx: Double; dy: Double; nDash: Integer; L0: Double; L1: Double; L2: Double; L3: Double; L4: Double; L5: Double; L6: Double; L7: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchPatEnd (hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchGetLoopSize (hHatch: IntPtr; iLoop: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchGetPoint (hHatch: IntPtr; iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcHatchGetEnt (hHatch: IntPtr; Mode: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanAddVer (hRPlan: IntPtr; X: Double; Y: Double): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanSetCurve (hVer: IntPtr; Radius: Double; LenClot1: Double; LenClot2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcRPlanSetPos (hVer: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcRPlanDeleteVer (hRPlan: IntPtr; hVer: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcRPlanGetFirstVer (hRPlan: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanGetNextVer (hRPlan: IntPtr; hVer: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanGetLastVer (hRPlan: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanGetPrevVer (hRPlan: IntPtr; hVer: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanGetVer (hRPlan: IntPtr; Index: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcRPlanGetPoint (hRPlan: IntPtr; Dist: Double; pX: Pdouble; pY: Pdouble; pAngle: Pdouble; pSide: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcRPlanGetDist (hRPlan: IntPtr; X: Double; Y: Double; pX2: Pdouble; pY2: Pdouble; pDist: Pdouble; pOffset: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcVportSetView (hVport: IntPtr; Xcen: Double; Ycen: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcVportLayerDlg (hVport: IntPtr; hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcVportLayerCmd (hVport: IntPtr; Cmd: Integer; hLayer: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcBlkRefAddAtt (hBlockRef: IntPtr; szTag: PWideChar; szValue: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlkRefGetFirstAtt (hBlockRef: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlkRefGetNextAtt (hBlockRef: IntPtr; hAttrib: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcBlkRefGetAtt (hBlockRef: IntPtr; szTag: PWideChar): IntPtr; stdcall; external 'Litecad64.dll';
Function lcShapeAddEnt (hShape: IntPtr; hEnt: IntPtr; bErase: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcShapeEnd (hShape: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcShapeGetFirstEnt (hShape: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcShapeGetNextEnt (hShape: IntPtr; hEnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcShapeGetLastEnt (hShape: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
Function lcShapeGetPrevEnt (hShape: IntPtr; hEnt: IntPtr): IntPtr; stdcall; external 'Litecad64.dll';
